# rust_proc_qq

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: CustomShowQR.md  EventResult.md  Proxy.md  SchedulerJob.md
proc_qq/: Cargo.toml  README.md
proc_qq/src/: captcha_window.rs  client.rs  client_builder.rs  client_handler.rs  entities.rs  lib.rs
proc_qq/src/client/: mod.rs
proc_qq/src/features/: captcha_window.rs  connect_handler.rs  mod.rs  proxy.rs  scheduler.rs
proc_qq/src/handler/: event_args.rs  events.rs  mod.rs  processes.rs  results.rs  scheduler.rs
proc_qq/src/re_export/: bytes.rs  mod.rs  reqwest.rs  rs_qq.rs
proc_qq/src/re_exports/: async_trait.rs  image.rs  mod.rs  qr2term.rs  regex.rs  ricq.rs  ricq_core.rs  rq_engine.rs  rqrr.rs  serde.rs  serde_derive.rs  tokio.rs
proc_qq/src/traits/: client_trait.rs  group_trait.rs  member_trait.rs  message_chain_trait.rs  message_trait.rs  mod.rs
proc_qq_codegen/: Cargo.toml
proc_qq_codegen/src/: bot_command.rs  event_arg.rs  lib.rs
proc_qq_examples/: Cargo.toml
proc_qq_examples/src/: hello2_module.rs  hello_module.rs  lib.rs  result_handlers.rs  scheduler_handlers.rs  tests.rs
proc_qq_examples/src/input_uin_password/: main.rs
proc_qq_examples/src/password_login/: main.rs
proc_qq_examples/src/pop_window/: main.rs
proc_qq_examples/src/qr_login/: main.rs
proc_qq_macros/: Cargo.toml
proc_qq_template/: Cargo.toml
proc_qq_template/src/: config.rs  imglib.rs  main.rs  menu.rs  misc.rs
proc_qq_template/src/database/: mod.rs  mongo.rs  redis.rs
proc_qq_template/src/modules/: group_admin.rs  ignore.rs  image_lib.rs  imglib.rs  menu.rs  mod.rs
proc_qq_template/src/modules/game/: group_sign_in.rs  mod.rs
proc_qq_template/src/modules/query/: daily_english.rs  image_lib.rs  mod.rs
proc_qq_template/src/modules/tools/: group_admin.rs  mod.rs
proc_qq_template/src/tools/: mod.rs
proc_qq_template/src/utils/: ffmpeg_cmd.rs  local.rs  mod.rs
proc_qq_tests/: Cargo.toml
proc_qq_tests/src/: lib.rs
