[package]
name = "proc_qq"
version = "0.1.17"
edition = "2021"
description = "QQ client framework"
license = "MIT"
repository = "https://github.com/niuhuan/rust_proc_qq"

[dependencies]
async-trait = "0.1"
futures = "0.3"
reqwest = "0.11"
proc_qq_codegen = { path = "../proc_qq_codegen" }
bytes = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
ricq = "0.1.17"
ricq-core = "0.1.17"
anyhow = "1"
serde = "1"
serde_json = "1"
serde_derive = "1"
rand = "0.8.5"
qr2term = { version = "0.3.1", optional = true }
rqrr = { version = "0.5.2", optional = true }
image = { version = "0.24.0", features = ["png", "jpeg", "bmp", "gif", "webp"], optional = true }

[target.'cfg(any(target_os = "windows",target_os = "linux",target_os = "macos"))'.dependencies]
opener = "0.5.0"

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10.38", features = ["vendored"] }

[target.'cfg(any(target_os = "windows"))'.dependencies]
wry = { version = "0.19.0", optional = true }

[features]
default = ["pop_window_slider", "console_qr"]
pop_window_slider = ["dep:wry"]
console_qr = ["dep:qr2term", "dep:rqrr", "dep:image"]
