[package]
name = "proc_qq"
version = "0.1.33"
edition = "2021"
description = "QQ client framework"
license = "MIT"
repository = "https://github.com/niuhuan/rust_proc_qq"

[dependencies]
async-trait = "0.1"
futures = "0.3"
reqwest = "0.11"
proc_qq_codegen = { path = "../proc_qq_codegen" }
bytes = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
ricq = "0.1.19"
ricq-core = "0.1.19"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8"
qr2term = "0.3"
rqrr = { version = "0.6.0", optional = true }
image = { version = "0.24.5", features = ["png", "jpeg", "bmp", "gif", "webp"], optional = true }
regex = "1"
tokio-socks = { version = "0.5", optional = true }
trust-dns-resolver = { version = "0.22", optional = true }
url = { version = "2.3", optional = true }

[target.'cfg(any(target_os = "windows",target_os = "linux",target_os = "macos"))'.dependencies]
opener = "0.5"

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10.45", features = ["vendored"] }

[target.'cfg(any(target_os = "windows"))'.dependencies]
wry = { version = "0.23", optional = true }

[features]
default = ["pop_window_slider", "console_qr"]
pop_window_slider = ["dep:wry"]
console_qr = ["dep:rqrr", "dep:image"]
connect_handler = []
proxy = ["connect_handler", "dep:tokio-socks", "dep:trust-dns-resolver", "dep:url"]
