[package]
name = "proc_qq_codegen"
version = "0.1.0"
edition = "2021"
description = "QQ client framework"
license = "MIT"

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full", "visit", "visit-mut", "extra-traits"] }
proc-macro2 = "1.0"
proc-macro-error = { version = "1.0", default-features = false }
devise = "0.3"

[lib]
proc-macro = true
