[package]
name = "proc_qq_examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "password-login"
path = "src/password_login/main.rs"

[[bin]]
name = "qr-login"
path = "src/qr_login/main.rs"

[[bin]]
name = "input-uin-password"
path = "src/input_uin_password/main.rs"

[dependencies]
proc_qq = { path = "../proc_qq" ,features = ["event_args","scheduler"]}
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
