[package]
name = "proc_qq_template"
version = "0.1.0"
edition = "2021"

[dependencies]
proc_qq = { path = "../proc_qq", features = ["event_args"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1"
regex = "1"
mongodb = { version = "2", features = ["tokio-runtime"] }
serde = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"
serde_json = "1.0"
once_cell = "1"
redis = { version = "0", features = ["tokio-comp"] }
hex = "0.4"
chrono = "0.4"
rand = "0"
futures = "0.3"
reqwest = "0"
silk-rs = "0.2"
